[gd_scene load_steps=17 format=2]

[ext_resource path="res://Pomodefense/Scenes/Map1.tscn" type="PackedScene" id=1]
[ext_resource path="res://Pomodefense/Assets/blue_button12.png" type="Texture" id=2]
[ext_resource path="res://Pomodefense/Assets/cat.png" type="Texture" id=3]
[ext_resource path="res://Pomodefense/Assets/bunny.png" type="Texture" id=4]
[ext_resource path="res://Pomodefense/Assets/dog.png" type="Texture" id=5]
[ext_resource path="res://Pomodefense/Assets/green_button12.png" type="Texture" id=6]
[ext_resource path="res://Pomodefense/Assets/red_button09.png" type="Texture" id=7]
[ext_resource path="res://Pomodefense/Scenes/PomoDefenseGame.gd" type="Script" id=8]
[ext_resource path="res://Pomodefense/Scenes/UI.gd" type="Script" id=9]
[ext_resource path="res://Pomodefense/Assets/HPbar.jpg" type="Texture" id=10]
[ext_resource path="res://Pomodefense/Resources/Kenney Rocket.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://Pomodefense/Assets/forward.png" type="Texture" id=12]
[ext_resource path="res://Pomodefense/Assets/fastForward.png" type="Texture" id=13]
[ext_resource path="res://Pomodefense/Assets/pause.png" type="Texture" id=14]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 11 )

[node name="PomoDefenseGame" type="Node2D"]
script = ExtResource( 8 )

[node name="Map1" parent="." instance=ExtResource( 1 )]
position = Vector2( 0, 2 )

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 9 )

[node name="HUD" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildBar" type="VBoxContainer" parent="UI/HUD"]
anchor_top = 0.477
anchor_right = 0.229
anchor_bottom = 0.737
margin_left = 5.0
margin_top = -397.3
margin_right = -334.68
margin_bottom = -383.3
grow_horizontal = 0
rect_min_size = Vector2( 100, 100 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PomopetT1" type="TextureButton" parent="UI/HUD/BuildBar" groups=["build_buttons"]]
margin_left = 10.0
margin_right = 90.0
margin_bottom = 80.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 2 )
expand = true

[node name="Icon" type="TextureRect" parent="UI/HUD/BuildBar/PomopetT1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -4.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PomopetT2" type="TextureButton" parent="UI/HUD/BuildBar" groups=["build_buttons"]]
margin_left = 10.0
margin_top = 84.0
margin_right = 90.0
margin_bottom = 164.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 6 )
expand = true

[node name="Icon" type="TextureRect" parent="UI/HUD/BuildBar/PomopetT2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1.0
margin_bottom = -4.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PomopetT3" type="TextureButton" parent="UI/HUD/BuildBar" groups=["build_buttons"]]
margin_left = 10.0
margin_top = 168.0
margin_right = 90.0
margin_bottom = 248.0
rect_min_size = Vector2( 80, 80 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 7 )
expand = true

[node name="Icon" type="TextureRect" parent="UI/HUD/BuildBar/PomopetT3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -4.0
margin_bottom = -6.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoBar" type="ColorRect" parent="UI/HUD"]
self_modulate = Color( 0.0235294, 0.0235294, 0.0235294, 0.470588 )
anchor_right = 1.0
margin_left = -10.0
margin_top = -10.0
margin_right = -10.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 30 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="H" type="HBoxContainer" parent="UI/HUD/InfoBar"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DollarSign" type="Label" parent="UI/HUD/InfoBar/H"]
margin_right = 60.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 30 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.705882 )
custom_fonts/font = SubResource( 1 )
text = "$"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Money" type="Label" parent="UI/HUD/InfoBar/H"]
margin_left = 64.0
margin_right = 124.0
margin_bottom = 30.0
rect_min_size = Vector2( 60, 30 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.705882 )
custom_fonts/font = SubResource( 1 )
text = "50"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="TextureProgress" parent="UI/HUD/InfoBar/H"]
margin_left = 1429.0
margin_top = 7.0
margin_right = 1829.0
margin_bottom = 22.0
rect_min_size = Vector2( 400, 15 )
size_flags_horizontal = 10
size_flags_vertical = 4
value = 100.0
texture_under = ExtResource( 10 )
texture_progress = ExtResource( 10 )
tint_under = Color( 0.560784, 0.172549, 0.172549, 1 )
tint_progress = Color( 0, 1, 0.156863, 1 )
nine_patch_stretch = true

[node name="Tween" type="Tween" parent="UI/HUD/InfoBar/H/Health"]

[node name="HP" type="Label" parent="UI/HUD/InfoBar/H"]
margin_left = 1833.0
margin_right = 1881.0
margin_bottom = 30.0
rect_min_size = Vector2( 12, 30 )
custom_fonts/font = SubResource( 2 )
text = "100"
align = 2
valign = 1

[node name="bump" type="Control" parent="UI/HUD/InfoBar/H"]
margin_left = 1885.0
margin_right = 1920.0
margin_bottom = 30.0
rect_min_size = Vector2( 35, 0 )

[node name="GameControls" type="HBoxContainer" parent="UI/HUD/InfoBar"]
margin_left = 128.0
margin_top = 5.0
margin_right = 272.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 25 )
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PausePlay" type="TextureButton" parent="UI/HUD/InfoBar/GameControls"]
pause_mode = 2
margin_right = 25.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
size_flags_horizontal = 4
size_flags_vertical = 4
toggle_mode = true
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 14 )
expand = true

[node name="SpeedUp" type="TextureButton" parent="UI/HUD/InfoBar/GameControls"]
margin_left = 29.0
margin_right = 54.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )
size_flags_horizontal = 4
size_flags_vertical = 4
texture_normal = ExtResource( 13 )
expand = true

[node name="NextWave" type="Button" parent="UI/HUD/InfoBar/GameControls"]
margin_left = 58.0
margin_right = 139.0
margin_bottom = 25.0
text = "Next Wave"

[node name="WaveCount" type="Label" parent="UI/HUD/InfoBar/GameControls"]
margin_left = 143.0
margin_top = 5.0
margin_right = 194.0
margin_bottom = 19.0
text = "Wave: 0"

[node name="EnemyCount" type="Label" parent="UI/HUD/InfoBar/GameControls"]
margin_left = 198.0
margin_top = 5.0
margin_right = 269.0
margin_bottom = 19.0
text = "Enemies: 0"

[connection signal="pressed" from="UI/HUD/InfoBar/GameControls/PausePlay" to="UI" method="_on_PausePlay_pressed"]
[connection signal="pressed" from="UI/HUD/InfoBar/GameControls/SpeedUp" to="UI" method="_on_SpeedUp_pressed"]
[connection signal="pressed" from="UI/HUD/InfoBar/GameControls/NextWave" to="." method="_on_NextWave_pressed"]
